# whisper.cpp

./: CMakeLists.txt
examples/: CMakeLists.txt  common.cpp  common.h
examples/stream/: CMakeLists.txt  stream.cpp
examples/stream2/: CMakeLists.txt  README.md  stream2.cpp
include/: base64.hpp
